# integration-dashboard

./: .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  docker-bake.hcl  env.sample  pyproject.toml  sample.env  ta1.sh
.github/workflows/: publish.yaml
dashboard/: formatting.py  pipeline.py  sections.py  storage.py
dashboard/generate/: storage.py
dashboard/ui/: Home.py
dashboard/ui/pages/: 1_TA1.py  2_TA3.py
dashboard/ui/utils/: formatting.py  storage.py
dashboard/utils/: storage.py
docker/: Dockerfile  docker-bake.hcl
outputs/: notice.txt
outputs/ta1/: report_20231017_194227.json
outputs/ta3/: report_20230908_100637.json
scripts/: ta1.sh
