[tool.poetry]
name = "integration-dashboard"
version = "0.1.0"
description = ""
authors = ["Five Grant <5@jataware.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.26.0"
poethepoet = "^0.22.1"

[tool.poe.tasks]
ui = "streamlit run dashboard/ui/Home.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
